<resources>
    <string name="app_name">MotionKeyboard</string>
    <string name="nurumi_ime">Nurumi IME</string>
    <string name="nurumi_setting">Nurumi Setting</string>
    <string name="subtype_en_US">English (US)</string>

    <string name="txt_inform">Inform</string>
    <string name="txt_tutorial_on">Tut_on</string>
    <string name="txt_tutorial_off">Tut_off</string>
    <string name="txt_setting">Setting</string>

    <string name="txt_title_setting">사용자 사용 조건 선택</string>
    <string name="txt_keyboard_information">해당 키보드 정보</string>
    <string name="txt_developer_title">개발자 정보</string>
    <string name="txt_developer_summary">개발자 정보 확인하기</string>
    <string name="txt_developer_mail">개발자에게 메일 보내기</string>

    <string name="txt_automata">입력 방법</string>
    <string name="txt_automata1">방법1</string>
    <string name="txt_automata2">방법2</string>
    <string name="txt_automata3">방법3</string>

    <string name="txt_hand">주로 사용할 손의 방향 선택 [On: 오른손, Off: 왼손]</string>
    <string name="txt_left">왼손</string>
    <string name="txt_right">오른손</string>

    <string name="txt_finger">한손 또는 양손 [On: 한손, Off: 양손]</string>
    <string name="txt_5finger">한손</string>
    <string name="txt_10finger">양손</string>

    <string name="txt_language">주로 사용할 언어 선택 [On: 한국어, Off: 영어]</string>
    <string name="txt_english">영어</string>
    <string name="txt_korean">한국어</string>

</resources>